# swingerWebApp

./: .flaskenv  README.md  app.db  app.py  config.py  models.py  pyproject.toml
app/: models.py  routes.py
app/static/: style.css
app/templates/: base.html  edit_profile.html  index.html  login.html  register.html  user.html
migrations/versions/: 2469c3c88012_user_table.py  3e4354eef64d_initial_migration.py
static/: style.css
templates/: index.html
